--- a/style.css
+++ b/style.css
@@ -138,7 +138,89 @@ footer {
 	padding:56px 0 28px;
 }
 
+.inform {
+	margin-top:40px;
+	padding-top:32px;
+}
 
+.lang {
+	width:100%;
+	height:40px;
+	background-color:#3B3B3B;
+	color:white;
+	font-size:13px;
+	line-height: 15px;
+	padding-left:48px;
+	border:none;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	border-radius: 4px;
+	outline: none;
+}
+
+form div {
+	position: relative;
+}
+
+form div:before{
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+  background-image: url('img\\world.png');
+  position: absolute;
+  left: 16px;
+  top: 12px;
+}
+
+form div:after{
+  content: "";
+  display: block;
+  width: 14px;
+  height: 8px;
+  background-image: url('img\\Shape^.png');
+  position: absolute;
+  right: 8px;
+  top: 16px;
+}
+
+.hashtag {
+	font-size: 16px;
+	line-height: 19px;
+	margin-top: 33px;
+	color:#FFFFFF;
+}
+
+.hashtag span {
+	color:#49A144;
+}
+
+.links {
+	margin-top: 17px;
+}
+
+.links__list {
+	padding:0;
+	margin:0;
+}
+
+.links__item {
+	display: inline-block;
+	margin-right: 12px;
+	position: relative;
+}
+
+.links__item:first-child:hover {
+	background-image: url('img\\facebook.png');
+}
+
+.links__item:nth-child(2):hover {
+	background-image: url('img\\twitter.png');
+}
+
+.links__item:last-child:hover {
+	background-image: url('img\\instagram.png');
+}
 /* Медиазапросы*/
 @media screen and (max-width: 320px) {
 	.basket {
