--- a/style.css
+++ b/style.css
@@ -280,8 +280,9 @@ form div:after{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	
 	padding:38px 0;
+	padding-left:38px;
+	padding-right: 29px;
 }
 
 .restr__name {
@@ -289,7 +290,6 @@ form div:after{
 	font-size: 36px;
 	font-weight: 400;
 	line-height: 42px;
-	letter-spacing: 0em;
 	margin:0;
 	margin-bottom: 40px;
 }
@@ -297,7 +297,7 @@ form div:after{
 .descrip {
 	display: flex;
 	align-items:center;
-	margin:auto;
+	justify-content: space-between;
 }
 
 .kitchen {
@@ -322,7 +322,7 @@ form div:after{
 }
  
 /* Медиазапросы*/
-@media screen and (max-width: 355px) {
+@media screen and (max-width: 575px) {
 	.basket {
 		display: none;
 	}
@@ -331,5 +331,21 @@ form div:after{
 	}
 	.socium a img {
 		height:36px;
+	}
+	.restr__name {
+		font-size: 24px;
+	}
+	.descrip {
+		flex-direction: column;
+	}
+	.kitchen {
+		margin:0 0 16px 0;
+	}
+}
+
+@media screen and (min-width: 576px) and (max-width: 991px) {
+	.card__restr {
+		padding-left: 29px;
+		padding-right: 52px;
 	}
 }
