--- a/style.css
+++ b/style.css
@@ -283,6 +283,7 @@ form div:after{
 	padding:38px 0;
 	padding-left:38px;
 	padding-right: 29px;
+	border-radius: 2px;
 }
 
 .restr__name {
@@ -310,7 +311,6 @@ form div:after{
 }
 
 .time {
-	font-family: Roboto;
 	font-size: 12px;
 	background-color: #262626;
 	border-radius: 16px;
@@ -320,7 +320,32 @@ form div:after{
 	color:white;
 	margin:0;
 }
+
+/*список блюд*/
+.list-page {
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 19px;
+	color: #626262;
+	margin-top: 32px;
+}
+
+.list {
+	display: flex;
+	flex-wrap: nowrap;
+	padding: 0;
+	margin:0;
+}
  
+.list__item {
+	margin-right: 40px;
+	display: inline-block;
+	white-space: nowrap;
+}
+
+.list-page a:visited {
+	color:#327430;
+}
 /* Медиазапросы*/
 @media screen and (max-width: 575px) {
 	.basket {
@@ -340,6 +365,9 @@ form div:after{
 	}
 	.kitchen {
 		margin:0 0 16px 0;
+	}
+	.list-page {
+		display: none;
 	}
 }
 
