--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	font-family: Roboto, sans-serif !important;
 }
@@ -424,12 +428,21 @@ form div:after{
 	text-align: center;
 	vertical-align: middle;
 	border-radius: 2px;
+	display:none;
 }
 
-.up-button a {
+.up-button img {
 	position: absolute;
 	top: 35%;
 	left:40%;
+}
+
+.up-button:hover {
+	background-color: rgb(35, 104, 35);
+	transition: 0.5s;
+}
+.shown {
+	display:inline-block;
 }
 
 /* Медиазапросы*/
